report datepicker alignment issue

--- a/src/app/components/reports/reports.component.css
+++ b/src/app/components/reports/reports.component.css
@@ -100,3 +100,7 @@
 .searchFiled .mydp .selector {
     margin-left: 0em ! important;
 }
+
+.mydp .selector {
+    margin-left: 0 ! important;
+}
